# codon-numpy

./: .gitignore  CMakeLists.txt  license.md  plugin.toml
ir/: numpy.cpp  numpy.h
stdlib/numpy/: __init__.codon  blas.codon  linalg.codon
